V0.7.9.3 add bloods and different speeds